docs: create student
